# BigBazar

./: .env_example  LICENSE.md  README.md  cover_test.html  pyproject.toml
bb/: factory.py  main.py
bb/cart/: models.py
bb/core/: config.py
bb/products/: models.py  routes.py  schemas.py  services.py
bb/security/: auth.py
bb/service/: constants.py
bb/users/: models.py  routes.py  schemas.py  services.py
migrations/models/: 0_20231109232620_init.py  1_20231114234009_update.py  2_20231115162341_update.py
tests/: conftest.py  products_test.py  users_test.py
